fix: fix out of scope comparator