@@ -3,7 +3,6 @@ package io.acordi.looqboxbackendchallenge.core.util.sorting.algorithms.implement
 import io.acordi.looqboxbackendchallenge.core.util.sorting.algorithms.SortingAlgorithm;
 
 import java.util.Arrays;
-import java.util.Comparator;
 import java.util.List;
 
 public class MergeSort<T> implements SortingAlgorithm<T> {
@@ -33,62 +32,73 @@ public class MergeSort<T> implements SortingAlgorithm<T> {
     // Usage:
     // Merge Sort is ideal for applications where stability is important and additional memory is not a constraint.
 
-    // Here I have used a lot of generics (<T> and Comparator) so that this method can be used for both String comparison
-    // And int comparison (alphabetical and length sort, as requested).
+    // The Comparison interface allows dynamic sorting logic to be injected,
+    // making the algorithm reusable for various data types and criteria.
+    // This approach decouples sorting logic from comparison logic.
+    // Originally, I was going to use the interface Comparator, which I later saw it was out of scope.
+    // Then I decided to create my own interface.
+
     @Override
-    public List<T> sort(List<T> items, Comparator<T> comparator) {
+    public List<T> sort(List<T> items, Comparison<T> comparison) {
         //If the list has one or no elements, it is already sorted
         if (items.size() < 2) {
             return items;
         }
-        T[] array = (T[]) items.toArray((T[]) new Object[items.size()]);
-        mergeSort( array, comparator );
-        items = Arrays.asList(array);
-        return items;
+        // Convert List to Array
+        @SuppressWarnings("unchecked")
+        T[] array = items.toArray((T[]) new Object[items.size()]);
+
+        // Perform Merge Sort
+        mergeSort(array, 0, array.length - 1, comparison);
+
+        // Convert Array back to List
+        return List.of(array);
     }
 
-    private void mergeSort(T[] array, Comparator<T> comparator) {
-        int length = array.length;
-
-        if (length < 2) {
+    private void mergeSort(T[] array, int left, int right, Comparison<T> comparison) {
+        if (left >= right) {
             return;
         }
 
-        // Split the array into left and right halves
-        int mid = length / 2;
-        T[] left = Arrays.copyOfRange(array, 0, mid);
-        T[] right = Arrays.copyOfRange(array, mid, length);
+        int mid = left + (right - left) / 2;
 
-        // Recursively sort both halves
-        mergeSort(left, comparator);
-        mergeSort(right, comparator);
+        // Recursively sort left and right halves
+        mergeSort(array, left, mid, comparison);
+        mergeSort(array, mid + 1, right, comparison);
 
-        // Merge the sorted halves
-        merge(array, left, right, comparator);
+        // Merge sorted halves
+        merge(array, left, mid, right, comparison);
     }
 
-    private void merge(T[] array, T[] left, T[] right, Comparator<T> comparator) {
-        int i = 0, j = 0, k = 0;
+    private void merge(T[] array, int left, int mid, int right, Comparison<T> comparison) {
+        // Copy the subarrays
+        T[] leftPart = Arrays.copyOfRange(array, left, mid + 1);
+        T[] rightPart = Arrays.copyOfRange(array, mid + 1, right + 1);
 
-        // Merge elements from left and right arrays in sorted order
-        while (i < left.length && j < right.length) {
-            if (comparator.compare(left[i], right[j]) <= 0) {
-                array[k++] = left[i++];
+        // Indexes into the left, right, and merged subarrays
+        int i = 0, j = 0;
+        int k = left;
+
+        // Merge subarrays
+        while (i < leftPart.length && j < rightPart.length) {
+            if (comparison.isLessThan(leftPart[i], rightPart[j])) {
+                array[k++] = leftPart[i++];
             } else {
-                array[k++] = right[j++];
+                array[k++] = rightPart[j++];
             }
         }
 
-        // Copy any remaining elements from the left array
-        while (i < left.length) {
-            array[k++] = left[i++];
+        // Copy any leftover elements from the left subarray
+        while (i < leftPart.length) {
+            array[k++] = leftPart[i++];
         }
 
-        // Copy any remaining elements from the right array
-        while (j < right.length) {
-            array[k++] = right[j++];
+        // Copy any leftover elements from the right subarray
+        while (j < rightPart.length) {
+            array[k++] = rightPart[j++];
         }
     }
+
 
 
 }
